force-app/main/default/objects/maps__LiveEventAssociation__c/maps__LiveEventAssociation__c.object-meta.xml
<CustomObject>
    <label>Maps Live Event Association</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Maps Live Event Association Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Maps Live Event Associations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>