force-app/main/default/objects/maps__LiveEventAssociation__c/fields/maps__AssociatedAccount__c.field-meta.xml
<CustomField>
    <fullName>maps__AssociatedAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Associated Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Live Event Associations</relationshipLabel>
    <relationshipName>LiveEventAssociations</relationshipName>
    <type>Lookup</type>
</CustomField>