force-app/main/default/objects/maps__LiveEventAssociation__c/fields/maps__AssociatedContact__c.field-meta.xml
<CustomField>
    <fullName>maps__AssociatedContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Associated Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Live Event Associations</relationshipLabel>
    <relationshipName>LiveEventAssociations</relationshipName>
    <type>Lookup</type>
</CustomField>