force-app/main/default/objects/maps__LiveEventAssociation__c/fields/maps__AssociatedLead__c.field-meta.xml
<CustomField>
    <fullName>maps__AssociatedLead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Associated Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Live Event Associations</relationshipLabel>
    <relationshipName>LiveEventAssociations</relationshipName>
    <type>Lookup</type>
</CustomField>