force-app/main/default/objects/maps__LiveEventAssociation__c/fields/maps__DistanceToStopFeet__c.field-meta.xml
<CustomField>
    <fullName>maps__DistanceToStopFeet__c</fullName>
    <formula>maps__DistanceToStopMiles__c * 5280</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distance To Stop (ft)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>