force-app/main/default/objects/maps__LiveEventAssociation__c/fields/maps__DistanceToStopKilos__c.field-meta.xml
<CustomField>
    <fullName>maps__DistanceToStopKilos__c</fullName>
    <label>Distance To Stop (km)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>