force-app/main/default/objects/maps__LiveEventAssociation__c/fields/maps__DistanceToStopMeters__c.field-meta.xml
<CustomField>
    <fullName>maps__DistanceToStopMeters__c</fullName>
    <formula>maps__DistanceToStopKilos__c * 1000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distance To Stop (m)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>