force-app/main/default/objects/maps__LiveEventAssociation__c/fields/maps__DistanceToStopMiles__c.field-meta.xml
<CustomField>
    <fullName>maps__DistanceToStopMiles__c</fullName>
    <description>Distance to the stop in miles</description>
    <formula>ROUND(maps__DistanceToStopKilos__c * 0.62137, 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Distance to the stop in miles</inlineHelpText>
    <label>Distance To Stop (mi)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>