force-app/main/default/objects/maps__LiveEventAssociation__c/fields/maps__EventDate__c.field-meta.xml
<CustomField>
    <fullName>maps__EventDate__c</fullName>
    <formula>maps__LiveAssetDailySummaryEvent__r.maps__LiveAssetDailySummary__r.maps__Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Date</label>
    <type>Date</type>
</CustomField>