force-app/main/default/objects/maps__LiveEventAssociation__c/fields/maps__EventStartTime__c.field-meta.xml
<CustomField>
    <fullName>maps__EventStartTime__c</fullName>
    <formula>maps__LiveAssetDailySummaryEvent__r.maps__EventStarted__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Start Time</label>
    <type>DateTime</type>
</CustomField>