force-app/main/default/objects/maps__LiveEventAssociation__c/fields/maps__EventStopTime__c.field-meta.xml
<CustomField>
    <fullName>maps__EventStopTime__c</fullName>
    <formula>maps__LiveAssetDailySummaryEvent__r.maps__EventEnded__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Stop Time</label>
    <type>DateTime</type>
</CustomField>