force-app/main/default/objects/maps__LiveEventAssociation__c/fields/maps__LiveAssetDailySummaryEvent__c.field-meta.xml
<CustomField>
    <fullName>maps__LiveAssetDailySummaryEvent__c</fullName>
    <label>Live Asset Daily Summary Event</label>
    <referenceTo>maps__LiveAssetDailySummaryEvent__c</referenceTo>
    <relationshipLabel>Live Event Associations</relationshipLabel>
    <relationshipName>LiveEventAssociations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>