force-app/main/default/objects/maps__LiveEventAssociation__c/fields/maps__LiveSummaryStopRelationshipConfig__c.field-meta.xml
<CustomField>
    <fullName>maps__LiveSummaryStopRelationshipConfig__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Live Summary Stop Relationship Config</label>
    <referenceTo>maps__LiveSummaryStopRelationshipConfig__c</referenceTo>
    <relationshipLabel>Live Event Associations</relationshipLabel>
    <relationshipName>LiveEventAssociations</relationshipName>
    <type>Lookup</type>
</CustomField>